syntax = "proto3";

import "google/protobuf/timestamp.proto";

message TimeSpan{
    google.protobuf.Timestamp start = 1;
    google.protobuf.Timestamp end = 2;
}

message PageRequest{
    uint64 page = 1;
    uint64 page_size = 2;
    bool paginate = 3;
}

message PageInfo{
    uint64 total_records = 1;
    uint64 total_pages = 2;
    uint64 page = 3;
    uint64 page_size = 4;
}

enum LifecycleType{
    LIFECYCLE_TYPE_NONE = 0;
    LIFECYCLE_TYPE_PERMANENT = 1;
    LIFECYCLE_TYPE_TIMESPAN = 2;
    LEFECYCLE_TYPE_QUOTA = 4;
}